--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lucide-react": "^0.488.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.7.4",
-    "next": "15.3.1",
+    "next": "^16.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
